# RAG-databricks-expert

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  experiments.ipynb  pyproject.toml
.github/workflows/: release_notes_ingestion.yml
data/qdrant_data/: raft_state.json
frontend/: app.py
src/backend-api/: main.py
src/backend-api/core/: generation_logic.py  search_logic.py
src/backend-api/core/utils/: openai_provider.py
src/backend-api/models/: api_models.py  provider_models.py
src/backend-api/routes/: health_routes.py  query_routes.py
src/backend_api/: Dockerfile.lambda  main.py  requirements.txt
src/backend_api/core/: generation_logic.py  search_logic.py
src/backend_api/core/utils/: openai_provider.py  openrouter_provider.py
src/backend_api/models/: api_models.py  provider_models.py
src/backend_api/routes/: health_routes.py  query_routes.py
src/db/qdrant/: qdrant_client.py
src/db/supabase/: supabase_client.py
src/ingestion/: ingestion.py
src/ingestion-pipeline/flows/: documentation_load.py
src/ingestion/loaders/: arxiv_loader.py  rss_loader.py
src/ingestion_pipeline/: requirements.txt  utils.py
src/ingestion_pipeline/flows/: documentation_load.py  release_notes_load.py
src/utils/: logger.py
supabase/: config.toml
supabase/migrations/: 20251111201532_create_tables.sql  20251112120803_add_documentation.sql
terraform/: main.tf
